# confluence-cli

./: .flake8  .travis.yml  Makefile  README.md  pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint-test.yml
confluence/: __main__.py  api.py  convert_html_to_xml.py
confluence/attachment/: create_attachment.py  delete_attachment.py  get_attachment.py  subcommand.py
confluence/common/: api.py  cli.py  utils.py
confluence/content/: get_content_by_id.py  subcommand.py  update_content.py
confluence/data/: logging.yaml
confluence/local/: convert_html_to_xml.py  subcommand.py
confluence/page/: get_page_body.py  subcommand.py  update_page.py
docs/: conf.py  index.rst  requirements.txt
docs/command_reference/: index.rst
docs/command_reference/attachment/: create.rst  delete.rst  get.rst  index.rst
docs/command_reference/content/: get_by_id.rst  index.rst  update.rst
docs/command_reference/local/: convert_html.rst  index.rst
docs/command_reference/page/: get_body.rst  index.rst  update.rst
docs/user_guide/: getting_started.rst  google_docs_migration.rst  index.rst
kci/: __main__.py
kci/command/: address.py
scripts/: convert_html_to_xml.py
tests/: test____main__.py  test_command.py
tests/local/: test__convert_html_to_xml.py
tests/resources/: img.html  page.html
