[tool.poetry]
name = "kurusugawa-cli"
version = "0.1.0"
description = "来栖川用語を出力するCLIです"
authors = ["来栖川 芹香"]
packages = [
    { include = "confluence" }
]
readme="README.md"
repository="https://github.com/kurusugawa-computer/kci-python-devcontainer"
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Environment :: Console",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Utilities",
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
pyquery = "^2"
requests-toolbelt = "^0.10.1"

[tool.poetry.dev-dependencies]
# test library
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"

# format library
black = "*" # メインのformatter
isort = "*" # import文をsortするために利用する
autoflake = "*" # 未使用のimport文を削除するために利用する

# lint library
flake8 = "*"
mypy = "*"
pylint = "*"

# document library
sphinx = "*"
docutils = "*"
# pandasのdocumentationページに近いレイアウトにするためのパッケージ
pydata-sphinx-theme = "*"

# type stub package
types-requests = "*"

# 開発用
ipython = "*"

[tool.poetry.scripts]
kurusugawa-cli = "confluence.__main__:cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
# `__init__.py`の順番が変わるとエラーになる可能性があるので、スキップする
skip="kci/__init__.py"

[tool.mypy]
# スタブが無いパッケージのエラーは無視させる.サードパーティのライブラリに型情報がないケースもあるため
ignore_missing_imports = true
# 型ヒントが付いていない関数もチェックする
check_untyped_defs = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


